[package]
name = "grr-gpu"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grr = { git = "https://github.com/msiglreith/grr.git", branch = "spirv" }
glutin = "0.25"
anyhow = "1"

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "c097297c5113fb6e4bbd28a829ed4a7df98d5e61" }

